@@ -6,8 +6,9 @@ ChangeLog
 
 GIT HEAD
 
-- Randomization of current partials (aka. harmonics) is
-  now available through context-menu. (EXPERIMENTAL)
+- Randomization of current parameters and partials is
+  now available through a new top-level push-button and
+  the context-menu respectively. (EXPERIMENTAL)
 - Updated for the newer Qt5 development tools (>= 5.13).
 - Per instance custom tuning (micro-tonal) option has
   been added to the previously existing global settings
